10 June 2013: Matthijs
- Bugfix: Fix malform in Outbound IXFR/TCP subsequent packet (thanks Stuart
  Lau).

6 June 2013: Matthijs
- Bugfix: Remove wrongly placed reset of serial disk acquired (thanks 
  Stuart Lau).
- Bugfix: Don't crash if NSEC3 Hash Algo is bogus.

22 April 2013: Matthijs
- OPENDNSSEC-247: TTL NSEC3 was not updated on SOA Minimum change.

15 February 2013: Matthijs
- Coverity report

11 February 2013: Matthijs
- Improve error logging when xfr fails due to xfrd_parse_rrs().

5 February 2013: Matthijs
- Fix deadlock when in corner case denial node has no RRset.
- OPENDNSSEC-389 / SUPPORT-50 / SUPPORT-51

1 February 2013: Matthijs
- OPENDNSSEC-388: Internal serial should take into account inbound
  serial.

29 January 2013: Matthijs
- Fix build warning

23 January 2013: Matthijs
- Always check for max backoff before working sleep/setting task time.

16 January 2013: Matthijs
- Signer should not fail read task if there is no new xfr (thanks
  Ville Mattila)

10 January 2013: Matthijs
- OPENDNSSEC-350: Improve logging when there are problems with inbound xfr
- SUPPORT-44: bind() to sockets before privdrop

10 December 2012: Matthijs
- Better TSIG logging and documentation, return NOTAUTH on TSIG error.

23 November 2012: Matthijs
- Add and remove empty non-terminal NSEC3s when adding/removing signed
  delegation.

20 November 2012: Matthijs
- Only commit zone transfers that are completely stored on disk (a
  connection reset may store half a zone transfer on disk)

7 November 2012: Matthijs
- Don't add double RRSIGs generated by same key for DNSKEY RRset.

29 Oktober 2012: Matthijs
- Put back occluded data in signed zone files/transfers.
  Make sure that their RRtypes don't end up in the NSEC(3) chain.

19 Oktober 2012: Matthijs
- Fix issue where IXFRs are coming too fast and some are lost.

19 September 2012: Matthijs
- Catch signals, instead of crashing.

13 September 2012: Matthijs
- OPENDNSSEC-330: NSEC3PARAM TTL should be set to zero.