@@ -215,6 +215,7 @@ cmdhandler_handle_cmd_update(int sockfd, cmdhandler_type* cmdc,
         if (!zone) {
             (void)snprintf(buf, ODS_SE_MAXLINE, "Zone %s not found.\n",
                 tbd);
+        lock_basic_lock(&zone->zone_lock);
             ods_writen(sockfd, buf, strlen(buf));
             /* update all */
             cmdhandler_handle_cmd_update(sockfd, cmdc, "--all");
@@ -321,10 +322,15 @@ cmdhandler_handle_cmd_sign(int sockfd, cmdhandler_type* cmdc, const char* tbd)
         lock_basic_lock(&zone->zone_lock);
         if (force_serial) {
             ods_log_assert(zone->db);
+            if (!util_serial_gt(serial, zone->db->intserial)) {
+                lock_basic_unlock(&zone->zone_lock);
+                (void)snprintf(buf, ODS_SE_MAXLINE, "Error: Unable to enforce "
+                    "serial %u for zone %s.\n", serial, tbd);
+                ods_writen(sockfd, buf, strlen(buf));
+                return;
+            }
             zone->db->altserial = serial;
             zone->db->force_serial = 1;
-            ods_log_info("[%s] enforcing serial %u on zone %s", cmdh_str,
-                serial, zone->name);
         }
         status = zone_reschedule_task(zone, engine->taskq, TASK_READ);
         lock_basic_unlock(&zone->zone_lock);
