@@ -78,13 +78,14 @@ namedb_type* namedb_create(void* zone);
 /**
  * Determine new SOA SERIAL.
  * \param[in] db namedb
+ * \param[in] zone_name zone name
  * \param[in] format <SOA><Serial> format from signer configuration
  * \param[in] inbound_serial inbound serial
  * \return ods_status status
  *
  */
-ods_status namedb_update_serial(namedb_type* db, const char* format,
-    uint32_t inbound_serial);
+ods_status namedb_update_serial(namedb_type* db, const char* zone_name,
+    const char* format, uint32_t inbound_serial);
 
 /**
  * Add empty non-terminals for domain.
