@@ -1,3 +1,7 @@
+12 June 2013: Matthijs
+- OPENDNSSEC-401: SUPPORT-58: Extend ods-signer sign <zone> with --serial <nr>
+  so that the user can specify the SOA serial to use in the signed zone.
+
 10 June 2013: Matthijs
 - Bugfix: Fix malform in Outbound IXFR/TCP subsequent packet (thanks Stuart
   Lau).
